# mPyLiarsDice

./: mPyLiarsDice.py  pyproject.toml  readme.txt  requirements.txt  todos.txt
.github/workflows/: cd.yml  ci.yml
mPyLiarsDice/: mPyLiarsDice.py  neocontrol.py  neopixel.py
testing/: cpuTester.py  playerestimate.py
